revised statistics page + removed minor alignment bug

--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_component_css/fullItem.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_component_css/fullItem.css
@@ -71,6 +71,7 @@
 
 .fullItem .itemBlockSubHeader {
 	float: left;
+	white-space: nowrap;
 }
 
 /*BODY*/
